# kilight-firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sonar-project.properties
boards/: kilight-mono-v1.0.x.h
cmake/: Policies.cmake  pico_sdk_import.cmake
lib/: CMakeLists.txt
openocd/: pico.cfg
src/: CMakeLists.txt  main.cpp
src/kilight/: KiLight.cpp  KiLight.h
src/kilight/com/: ServerReadBuffer.h  ServerWriteBuffer.h  WifiSubsystem.cpp  WifiSubsystem.h  server_protocol.cpp  server_protocol.h  wifi_data.h
src/kilight/conf/: BuildConfig.cpp.in  BuildConfig.h  HardwareConfig.cpp  HardwareConfig.h  ProjectConfig.cpp.in  ProjectConfig.h  WifiConfig.cpp.in  WifiConfig.h
src/kilight/core/: Alarm.h  CriticalSection.cpp  CriticalSection.h  LogSink.cpp  LogSink.h
src/kilight/hw/: ADC.cpp  ADC.h  DS18B20Driver.cpp  DS18B20Driver.h  DS2485Driver.cpp  DS2485Driver.h  I2CDevice.cpp  I2CDevice.h  OneWireDevice.cpp  OneWireDevice.h  OneWireSubsystem.cpp  OneWireSubsystem.h  Pin.cpp  Pin.h  SysClock.cpp  SysClock.h  SystemPins.cpp  SystemPins.h  TMP1826Driver.cpp  TMP1826Driver.h  TemperatureSensor.cpp  TemperatureSensor.h  onewire_address.cpp  onewire_address.h
src/kilight/output/: LightSubsystem.cpp  LightSubsystem.h  output_data.h  rgbcw_color.cpp  rgbcw_color.h
src/kilight/status/: CurrentMonitorSubsystem.cpp  CurrentMonitorSubsystem.h  ThermalSubsystem.cpp  ThermalSubsystem.h
src/kilight/storage/: StorageSubsystem.cpp  StorageSubsystem.h  save_data.h
src/kilight/ui/: UserInterfaceSubsystem.cpp  UserInterfaceSubsystem.h
src/kilight/util/: MathUtil.cpp  MathUtil.h
src/sdk-config/: lwipopts.h
